# dfs-solver

./: .gitignore  BACKLOG.md  CLAUDE.md  Cargo.toml
scripts/: diff-commit.sh  diff-dirty.sh  lib.sh  list-benches.sh  list-benchmarks.sh  list-puzzles.sh  run-all-interactive.sh  snapshot-stats.sh
src/: cages.rs  constraint.rs  core.rs  debug.rs  dfs.rs  dutch_whispers.rs  kropki.rs  lib.rs  magic_squares.rs  puzzle.rs  ranker.rs  solver.rs  strategy.rs  sudoku.rs  tui.rs  xsums.rs
variant-sudoku/: Cargo.toml
variant-sudoku-puzzles/: Cargo.toml
variant-sudoku-puzzles/scripts/: diff-commit.sh  diff-dirty.sh  diff-stats.sh  list-puzzles.sh  snapshot-stats.sh
variant-sudoku/src/: bench.rs  cages.rs  color_util.rs  constraint.rs  core.rs  debug.rs  dutch_whispers.rs  illegal_move.rs  index_util.rs  irregular.rs  kropki.rs  lib.rs  magic_squares.rs  memo.rs  numbered_rooms.rs  parity_shading.rs  range_util.rs  ranker.rs  region_constraint.rs  region_util.rs  simple_constraint.rs  solver.rs  sudoku.rs  thermos.rs  tui.rs  tui_std.rs  tui_util.rs  whispers.rs  xsums.rs
